<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".airquality.AirQualityData">

    <TextView
        android:id="@+id/header"
        style="@style/header_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Placeholder name"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/airqualityloading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent" />

        <TextView
            style="@style/data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_please_wait"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loading" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/airqualdisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <View
            android:id="@+id/top_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10sp"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sensor_title"
            style="@style/data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_divider" />

        <TextView
            android:id="@+id/sensor_name"
            style="@style/data_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_name"
            app:layout_constraintLeft_toRightOf="@+id/sensor_title"
            app:layout_constraintTop_toBottomOf="@+id/top_divider" />

        <TextView
            android:id="@+id/temp_title"
            style="@style/data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_title" />

        <TextView
            android:id="@+id/sensor_temp_output"
            style="@style/data_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_text"
            app:layout_constraintLeft_toRightOf="@id/temp_title"
            app:layout_constraintTop_toBottomOf="@id/sensor_title" />

        <TextView
            android:id="@+id/sensor_humidity_title"
            style="@style/data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sensor_title" />

        <TextView
            android:id="@+id/sensor_humidity_output"
            style="@style/data_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_text"
            app:layout_constraintRight_toLeftOf="@id/sensor_humidity_title"
            app:layout_constraintTop_toBottomOf="@id/sensor_title" />

        <TextView
            android:id="@+id/sensor_pressure_title"
            style="@style/data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_pressure"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp_title" />

        <TextView
            android:id="@+id/sensor_pressure_output"
            style="@style/data_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_text"
            app:layout_constraintLeft_toRightOf="@id/sensor_pressure_title"
            app:layout_constraintTop_toBottomOf="@id/temp_title" />

        <TextView
            android:id="@+id/sensor_altitude_title"
            style="@style/data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sensor_humidity_title" />

        <TextView
            android:id="@+id/sensor_altitude_output"
            style="@style/data_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_text"
            app:layout_constraintRight_toLeftOf="@id/sensor_altitude_title"
            app:layout_constraintTop_toBottomOf="@id/sensor_humidity_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/c02title"
            style="@style/data_title"
            android:text="@string/carbon_dioxide"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sensor_altitude_output"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sensor_co2_output"
            style="@style/data_output"
            android:text="@string/temp_text"
            app:layout_constraintLeft_toRightOf="@id/c02title"
            app:layout_constraintTop_toBottomOf="@id/sensor_altitude_output"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dustTitle"
            android:text="@string/dust_density"
            style="@style/data_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sensor_altitude_output"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dustOutput"
            android:text="@string/temp_text"
            style="@style/data_output"
            app:layout_constraintRight_toLeftOf="@id/dustTitle"
            app:layout_constraintTop_toBottomOf="@id/sensor_altitude_output"/>

        <View
            android:id="@+id/divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10sp"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/dustTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider_bottom"
            android:weightSum="3">
            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/graphTemp"/>
            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/graphHumidity"/>
            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/graphAirPressure"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/air_quality_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            style="@style/data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_view"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/add_button"
        android:padding="10sp"
        android:text="@string/add_sensor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sensor_refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/sensor_refresh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:background="@drawable/rounded_corners"
        android:drawableStart="@drawable/refresh_button"
        android:padding="10sp"
        android:text="@string/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_button"
        app:layout_constraintWidth_percent="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>

